Bit of a tidy up
Given what I've learnt I've started rearranging some of things to
prepare to getting the output type. Added some constants I think I'll
need, and removed some previous thoughts sketched down in src/lib that are no
longer needed.

I've also created a binary for this with the aim of verifying by making
sure the llvm-profdata output and my output match. But with a nicer CLI
that makes it easy to discover the version of my tool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,16 @@ version = "0.1.0"
 authors = ["xd009642 <danielmckenna93@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+cli = ["structopt"]
 
 [dependencies]
 flate2 = "1.0"
 leb128 = "0.2.4"
 nom = "6"
 md5 = "0.7"
+structopt = { version = "0.3.21", optional = true }
+
+[[bin]]
+name = "llvm_profparser"
+required-features = ["cli"]
