--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           toolchain: ${{ matrix.version }}
           override: true
-          components: [rustfmt, llvm-tools]
+          components: rustfmt, llvm-tools
       - name: build
         run: cargo check --no-default-features
         run: cargo check --all-features
