--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,8 @@ jobs:
           cargo test 
       - name: check formatting
         run: cargo fmt -- --check
+      - name: code-coverage
+        run: |
+          cargo install cargo-tarpaulin --force --git https://github.com/xd009642/tarpaulin --branch develop
+          cargo tarpaulin --follow-exec --coveralls ${{ secrets.GITHUB_TOKEN }}  --ciserver travis-ci
+        if: github.ref == 'ref/heads/master' && matrix.version == 'nightly'
