--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
         run: |
           cargo install cargo-tarpaulin --force --git https://github.com/xd009642/tarpaulin --branch develop
           cargo tarpaulin --force-clean --follow-exec --coveralls ${{ secrets.CODECOV_TOKEN }}
-        if: matrix.target == 'x86_64-unknown-linux-gnu' && matrix.version == 'nightly'
+        if: matrix.target == 'x86_64-unknown-linux-gnu' && matrix.version == 'stable'
