--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,8 @@ jobs:
       matrix:
         version:
           - stable
-          - beta
-        # So nightly updates the tools more frequently and without means to introspect
-        # versions via the profdata CLI I can't handle both printout formats 
+        # Need to bring these back in for llvm 12 update 
+        #  - beta
         #  - nightly 
         target:
           - x86_64-unknown-linux-gnu
