--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ nom = "6"
 md5 = "0.7"
 structopt = { version = "0.3.21", optional = true }
 num_enum = "0.5.1"
+object = "0.26.0"
 
 [dev-dependencies]
 assert_cmd = "1"
