--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ cli = ["structopt"]
 [dependencies]
 flate2 = "1.0"
 leb128 = "0.2.4"
-nom = "7.0.0-alpha1"
+nom = "=7.0.0-alpha1"
 md5 = "0.7"
 structopt = { version = "0.3.21", optional = true }
 num_enum = "0.5.1"
 object = "0.26.0"
 
 [dev-dependencies]
-assert_cmd = "1"
+assert_cmd = "2"
 pretty_assertions = "0.7"
 
 [[bin]]
