--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         version:
           - stable
           - beta
-          - nightly 
+         #- nightly 
         target:
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
