--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,10 @@ jobs:
     strategy:
       matrix:
         version:
+          - 1.51.0
           - stable
           - beta
-         #- nightly 
+          - nightly 
         target:
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
