Remove the lingering macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ cli = ["structopt"]
 [dependencies]
 flate2 = "1.0"
 leb128 = "0.2.4"
-nom = "=7.0.0-alpha1"
+nom = "7.0.0"
 md5 = "0.7"
 structopt = { version = "0.3.21", optional = true }
 num_enum = "0.5.1"
