--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "llvm_profparser"
-version = "0.1.0"
+version = "0.1.0-alpha1"
 authors = ["xd009642 <danielmckenna93@gmail.com>"]
+repository = "https://github.com/xd009642/llvm-profparser"
 edition = "2018"
+readme = "README.md"
+license = "Apache-2.0"
+categories = ["encoding"]
+keywords = ["coverage", "llvm"]
+exclude = ["tests/*", ".github/*"]
+build = "build.rs"
 
 [features]
 default = ["cli"]
