--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "llvm_profparser"
 version = "0.1.0-alpha1"
 authors = ["xd009642 <danielmckenna93@gmail.com>"]
+description = "Parsing and interpretation of llvm coverage profiles and generated data"
 repository = "https://github.com/xd009642/llvm-profparser"
 edition = "2018"
 readme = "README.md"
