--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ cli = ["structopt"]
 
 [dependencies]
 flate2 = "1.0"
+indexmap = "1.8.0"
 leb128 = "0.2.4"
 nom = "7.0.0"
-md5 = "0.7"
-structopt = { version = "0.3.21", optional = true }
 num_enum = "0.5.1"
+md5 = "0.7"
 object = "0.26.0"
+structopt = { version = "0.3.21", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
