--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ num_enum = "0.5.1"
 md5 = "0.7"
 object = "0.26.0"
 structopt = { version = "0.3.21", optional = true }
+thiserror = "1.0.30"
 
 [dev-dependencies]
 assert_cmd = "2"
