--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,6 @@ jobs:
         run: cargo fmt -- --check
       - name: code-coverage
         run: |
-          cargo install cargo-tarpaulin --force --git https://github.com/xd009642/tarpaulin --branch develop
+          cargo install  --version 0.19.1 cargo-tarpaulin
           cargo tarpaulin --force-clean --follow-exec --coveralls ${{ secrets.CODECOV_TOKEN }}
         if: matrix.target == 'x86_64-unknown-linux-gnu' && matrix.version == 'stable'
