Add llvm 15 to fully test windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ thiserror = "1.0.30"
 [dev-dependencies]
 assert_cmd = "2"
 cargo_metadata = "0.14.2"
+cfg-if = "1.0.0"
 pretty_assertions = "0.7"
 regex = "1.5.6"
 
