--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ cli = ["structopt"]
 
 [dependencies]
 flate2 = "1.0"
-indexmap = "1.8.0"
+indexmap = "~1.8"
 leb128 = "0.2.4"
 nom = "7.0.0"
 num_enum = "0.5.1"
