--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ md5 = "0.7"
 object = "0.26.0"
 structopt = { version = "0.3.21", optional = true }
 thiserror = "1.0.30"
+anyhow = "1.0.65"
 
 [dev-dependencies]
 assert_cmd = "2"
