--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ object = "0.26.0"
 structopt = { version = "0.3.21", optional = true }
 thiserror = "1.0.30"
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.16", features = ["env-filter"], optional = true }
+tracing-subscriber = { version = "0.3.16", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
