--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ build = "build.rs"
 
 [features]
 default = ["cli"]
-cli = ["structopt"]
+cli = ["structopt", "tracing-subscriber"]
 
 [dependencies]
 anyhow = "1.0.65"
@@ -26,6 +26,8 @@ nom = "7.0.0"
 object = "0.26.0"
 structopt = { version = "0.3.21", optional = true }
 thiserror = "1.0.30"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
