--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ leb128 = "0.2.4"
 md5 = "0.7"
 nom = "7.0.0"
 object = "0.26.0"
+rayon = "1.6.1"
 structopt = { version = "0.3.21", optional = true }
 thiserror = "1.0.30"
 tracing = "0.1.37"
