--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 license = "Apache-2.0"
 categories = ["encoding"]
 keywords = ["coverage", "llvm"]
-exclude = ["tests/*", ".github/*"]
+exclude = ["tests/*", ".github/*", "benches/*"]
 build = "build.rs"
 
 [features]
@@ -33,6 +33,7 @@ tracing-subscriber = { version = "0.3.16", optional = true }
 assert_cmd = "2"
 cargo_metadata = "0.14.2"
 cfg-if = "1.0.0"
+criterion = { version = "0.3.5", features = ["html_reports"] }
 pretty_assertions = "0.7"
 regex = "1.5.6"
 
@@ -43,3 +44,7 @@ required-features = ["cli"]
 [[bin]]
 name = "cov"
 required-features = ["cli"]
+
+[[bench]]
+name =  "profraw_parsing"
+harness = false
