--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "llvm_profparser"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["xd009642 <danielmckenna93@gmail.com>"]
 description = "Parsing and interpretation of llvm coverage profiles and generated data"
 repository = "https://github.com/xd009642/llvm-profparser"
@@ -67,3 +67,6 @@ path = "benches/report_merging.rs"
 name = "coverage_mapping"
 harness = false
 path = "benches/coverage_mapping.rs"
+
+[lints.rust]
+unexpected_cfgs = { level = "allow"  }
